# autodl19

./: .editorconfig  .gitignore  .travis.yml  CONSTANT.py  Dockerfile  README.md  automl.py  merge.py  model.py  models.py  preprocess.py  preprocessing.py  requirements.txt  run_test.py  setup.cfg  util.py  utils.py
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/ISSUE_TEMPLATE/: survey.md
AutoCV/kakaobrain/: model.py
AutoCV/kakaobrain/architectures/: resnet.py
AutoCV/kakaobrain/skeleton/data/: __init__.py  augmentations.py  dataloader.py  dataset.py  stratified_sampler.py  transforms.py
AutoCV/kakaobrain/skeleton/optim/: adabound.py  optimizers.py  scheduler.py  sgdw.py
AutoCV/kakaobrain/skeleton/projects/: __init__.py  logic.py  others.py
AutoNLP/DeepBlueAI/: get_embedding.py  model.py  tf_model.py
AutoNLP/upwind_flys/: data_manager.py  model.py  model_manager.py
AutoSpeech/PASA_NJU/: CONSTANT.py  data_augmentation.py  data_manager.py  data_process.py  model.py  model_manager.py  tools.py
AutoSpeech/PASA_NJU/models/: __init__.py  attention.py  attention_gru.py  bilstm_attention.py  cnn.py  cnn_features.py  crnn.py  crnn2d.py  crnn2d_larger.py  crnn2d_vgg.py  logistic_regression.py  lstm_attention.py  svm.py
automl/: model.py
automllib/: __init__.py  automl.py  base.py  compose.py  constants.py  ensemble.py  feature_extraction.py  feature_selection.py  impute.py  merge.py  model_selection.py  objective.py  preprocessing.py  table_join.py  train.py  under_sampling.py  utils.py
package/: __init__.py  automl.py  constants.py  merge.py  preprocess.py  preprocessing.py  utils.py
tabular/: model.py
tests/: __init__.py  test_automl.py  test_autonlp19.py  test_autoseries20.py  test_autospeech19.py  test_autowsl19.py  test_feature_selection.py  test_impute.py  test_model.py  test_preprocessing.py  test_under_sampling.py
(+11 files in other folders)
