[aliases]
test = pytest

[flake8]
max-complexity = 10

[metadata]
license = MIT License
name = automllib

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True

[options]
install_requires =
  category_encoders
  imbalanced-learn>=0.4.0
  lightgbm
  numpy
  optuna
  pandas>=0.23.0
  scikit-learn>=0.18.0
  scipy
packages = find:
python_requires = >=3.6
setup_requires = pytest-runner
tests_require =
  comet_ml
  pytest
  pytest-cov

[options.packages.find]
exclude = tests

[tool:pytest]
addopts = --cov
