[aliases]
test = pytest

[flake8]
max-complexity = 10

[metadata]
license = MIT License
name = automllib

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True

[options]
install_requires =
  colorlog
  imbalanced-learn>=0.4.0
  joblib
  lightgbm>=2.1.0
  numpy
  optuna>=0.9.0
  pandas>=0.23.0
  scikit-learn==0.21rc2
  scipy
packages = find:
python_requires = >=3.6
setup_requires = pytest-runner
tests_require =
  comet_ml
  pytest
  pytest-cov
  pytest-docstyle
  pytest-flake8
  pytest-mypy

[options.extras_require]
codecov = codecov

[options.packages.find]
exclude = tests

[tool:pytest]
addopts = --cov --docstyle --flake8 --mypy
docstyle_convention = numpy
